changes made in css

--- a/play.html
+++ b/play.html
@@ -3,49 +3,50 @@
 <head>
     <title>HTML play</title>
 <head>
+    <link rel="stylesheet" type="text/css" href="gs.css" />
 <body>
 <header>
     <h1>Sumanasri Paila snips a play</h1>
 </header>
-<h2>MODESTY BY PAUL HERVIEU</h2>
+<h2 class="name">MODESTY BY PAUL HERVIEU</h2>
 <p>
-   <h6> JACQUES</h6> 
+   <h6 class="JACQUES"> JACQUES</h6> 
    <p class="speech"> You have always been the most charming of women, the most----</p>
-<h6 class="HENRIETTE.">HENRIETTE.</h6>
+<h6 class="HENRIETTE">HENRIETTE.</h6>
 <p class="speech">HENRIETTE Stop! It's exactly that sort of exaggeration that's begun to
     make me so unsure of myself. I want you to understand once for all,
     Jacques, I have a conscience, and, furthermore, it is beginning to
     develop. I have taken some important resolutions</p>.
 
-<h6 class="JACQUES.">JACQUES.</h6>
+<h6 class="JACQUES">JACQUES.</h6>
 <p class="speech">What _do_ you mean?</p> 
 
-<h6 class="HENRIETTE.">HENRIETTE.</h6>
+<h6 class="HENRIETTE">HENRIETTE.</h6>
 <p class="speech">I have resolved to better myself, to raise my moral and
     intellectual standards, and to do that I must be guided, criticised----</p> 
-<h6 class="JACQUES.">JACQUES.</h6> 
+<h6 class="JACQUES">JACQUES.</h6> 
 <p class="speech">But you already possess every imaginable quality! You are
 charitable, cultured, refined----</p>
 
-<h6 class="HENRIETTE.">>HENRIETTE.</h6>
+<h6 class="HENRIETTE">>HENRIETTE.</h6>
 <p class="direction">[_Annoyed._] </p>
 <p class="speech">Please!</p>
 
 <p class="direction"> [_Turns away and sits on settee._ JACQUES _addresses her from
     behind chair_.]</p>
 
-<h6 class="JACQUES.">JACQUES.</h6>
+<h6 class="JACQUES">JACQUES.</h6>
 <p class="speech"> You are discreet, witty----</p>
 
-<h6 class="HENRIETTE.">HENRIETTE.</h6> 
+<h6 class="HENRIETTE">HENRIETTE.</h6> 
 <p class="speech">The same old compliments! Everybody tells me that. I want to
     be preached to, contradicted, scolded----</p>
-<h6 class="JACQUES.">JACQUES.</h6> 
+<h6 class="JACQUES">JACQUES.</h6> 
 <p class="speech">You could never stand _that_.</p>
-<h6 class="HENRIETTE.">HENRIETTE.</h6>
+<h6 class="HENRIETTE">HENRIETTE.</h6>
 <p class="speech">Yes, I could. I should be happy to profit by the criticism.
     It would inspire me.</p> 
-<h6 class="JACQUES.">JACQUES</h6>
+<h6 class="JACQUES">JACQUES</h6>
 <p class="speech">I'd like to see the man who has the audacity to criticise you
     to your face----</p>
 <h6 class="HENRIETTE">HENRIETTE</h6>
@@ -54,33 +55,33 @@ charitable, cultured, refined----</p>
 <h6 class="JACQUES">JACQUES.</h6>
 <p class="speech"> How could I? Everything about you pleases me. It can never be
     otherwise.</p>
-<h6 class="HENRIETTE.">HENRIETTE.</h6> 
+<h6 class="HENRIETTE">HENRIETTE.</h6> 
 <p class="speech">How interesting! That's the very reason I rejected your
     proposal. I sha'n't marry until I am certain that I shall not be
     continually pestered with compliments and flattery and submission. The
     man who marries me shall make it his business to remind me of my
     shortcomings, to correct all my mistakes. He must give me the assurance
     that I am continually bettering myself.</p>
-<h6 class="JACQUES.">JACQUES.</h6>
+<h6 class="JACQUES">JACQUES.</h6>
 <p class="speech">And this--husband--have you found him already?</p> 
-<h6 class="HENRIETTE.">HENRIETTE.</h6>
-<p class=""speech">What--? Oh, who knows?</p> 
-<h6 class="JACQUES.">JACQUES.</h6>
+<h6 class="HENRIETTE">HENRIETTE.</h6>
+<p class="speech">What--? Oh, who knows?</p> 
+<h6 class="JACQUES">JACQUES.</h6>
 <p class="speech">Perhaps it's--Albert?</p>
-<h6 class="HENRIETTE.">HENRIETTE. </h6>
-<p class=""speech">Perhaps it is--what of it?</p> 
-<h6 class="JACQUES.">JACQUES</h6>
+<h6 class="HENRIETTE">HENRIETTE. </h6>
+<p class="speech">Perhaps it is--what of it?</p> 
+<h6 class="JACQUES">JACQUES</h6>
 <p class="speech">Really!</p>
-<h6 class="HENRIETTE.">HENRIETTE.</h6>
+<h6 class="HENRIETTE">HENRIETTE.</h6>
 <p class="speech">You want me to speak frankly?</p>
-<h6 class="JACQUES.">JACQUES.</h6>
+<h6 class="JACQUES">JACQUES.</h6>
 <p class="speech">Of course.</p>
-<h6 class="HENRIETTE.">HENRIETTE.</h6>
+<h6 class="HENRIETTE">HENRIETTE.</h6>
 <p class="speech">Then--you wouldn't be annoyed if I said something nice about
     Albert?</p> 
 <p class="direction">[JACQUES _brings down_ C. _chair which is by desk, facing_
     HENRIETTE.</p>
-<h6 class="JACQUES.">JACQUES.</h6>
+<h6 class="JACQUES">JACQUES.</h6>
 <p class="speech">Why, he's your friend!</p>
 </body>
 </html>
