--- a/play.html
+++ b/play.html
@@ -83,5 +83,25 @@ charitable, cultured, refined----</p>
     HENRIETTE.</p>
 <h6 class="JACQUES">JACQUES.</h6>
 <p class="speech">Why, he's your friend!</p>
+<hr>
+<table>
+     <tr>
+       <th>Character</th>
+       <th>Actor</th>
+       <th>Understudy</th>
+     </tr>
+     <tr>
+       <td>JACQUES</td>
+       <td>Katherien Langford</td>
+       <td>Gal Gadot</td>
+     </tr>
+     <tr>
+       <td>HENRIETTE</td>
+       <td>Maise Williams</td>
+       <td>Millie Bobby Brown</td>
+     </tr>
+   </table>
+<hr>
 </body>
 </html>
+
