--- a/play.html
+++ b/play.html
@@ -102,6 +102,7 @@ charitable, cultured, refined----</p>
      </tr>
    </table>
 <hr>
+<a href="secondact.html" target="_blank">Click here for secondact</a>
 </body>
 </html>
 
