--- a/secondact.html
+++ b/secondact.html
@@ -5,11 +5,24 @@
         <title>It is an act,but there are more</title>
     </head>
     <body>
-        <h6 class="JACQUES">JACQUES.</h6>
-        <p class="speech">You have always been the most charming of women, the most----</p> <br>
-        <h6 class="HENRIETTE">HENRIETTE.</h6>
-        <p class="speech">I have resolved to better myself, to raise my moral and
-            intellectual standards, and to do that I must be guided, criticised----</p>
+        <h6 class="JACQUES">JACQUES.</h6> 
+<p class="speech">But you already possess every imaginable quality! You are
+charitable, cultured, refined----</p>
+
+<h6 class="HENRIETTE">>HENRIETTE.</h6>
+<p class="direction">[_Annoyed._] </p>
+<p class="speech">Please!</p>
+
+<p class="direction"> [_Turns away and sits on settee._ JACQUES _addresses her from
+    behind chair_.]</p>
+
+<h6 class="JACQUES">JACQUES.</h6>
+<p class="speech"> You are discreet, witty----</p>
+
+<h6 class="HENRIETTE">HENRIETTE.</h6> 
+<p class="speech">The same old compliments! Everybody tells me that. I want to
+    be preached to, contradicted, scolded----</p>
+    <hr>
             <a href="play.html">link to other page</a>
     </body>
 </html>
