--- a/play.html
+++ b/play.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>HTML play</title>
-<head>
     <link rel="stylesheet" type="text/css" href="gs.css" />
-<body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+    <body>
 <header>
     <h1>Sumanasri Paila snips a play</h1>
 </header>
@@ -103,6 +104,21 @@ charitable, cultured, refined----</p>
    </table>
 <hr>
 <a href="secondact.html" target="_blank">Click here for secondact</a>
+<hr>
+<p>
+    Pulled in icons
+</p>
+<i class="fa fa-heart" style="font-size:80px;"></i>
+<i class="fa fa-bitcoin" style="font-size:80px;"></i>
+<i class="fa fa-certificate" style="font-size:80px;"></i>
+<i class="fa fa-coffee" style="font-size:80px;"></i>
+<hr>
+<img src="roses.jpg" alt="Icons" style="width:500px;height:300px;">
+<hr>
+<ul class="navbar-horizontal">
+    <li> <a href="play.html">First</a> </li>  
+    <li> <a href="secondact.html">Second</a> </li>  
+</ul>
 </body>
 </html>
 
