--- a/secondact.html
+++ b/secondact.html
@@ -24,5 +24,10 @@ charitable, cultured, refined----</p>
     be preached to, contradicted, scolded----</p>
     <hr>
             <a href="play.html">link to other page</a>
+    <hr>
+    <ul class="navbar-horizontal">
+        <li> <a href="play.html">First</a> </li>  
+        <li> <a href="secondact.html">Second</a> </li>  
+   </ul>
     </body>
 </html>
